// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DualClassWrapper 1`] = `
Object {
  "Beethoven": Object {
    "Perpetual": Object {
      "contract": "dualClassWrapper",
    },
  },
  "Mozart": Object {
    "Perpetual": Object {
      "contract": "dualClassWrapper",
    },
  },
  "Vivaldi": Object {
    "100C-1H": Object {
      "contract": "dualClassWrapper",
    },
  },
}
`;

exports[`DualClassWrapper 2`] = `
Array [
  Array [
    Object {
      "contractAddresses": Object {
        "Custodians": Object {
          "Beethoven": Object {
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x59E6B3d43F762310626d2905148939973db2BBd3",
                "code": "aETH",
              },
              "bToken": Object {
                "address": "0x8A3bEca74E0E737460bDE45a09594A8D7D8c9886",
                "code": "bETH",
              },
              "custodian": Object {
                "address": "0x13016f27945f3f7b39A5Daae068D698e34E55491",
                "code": "BEETHOVEN-PPT",
              },
            },
          },
          "Mozart": Object {
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x2cB7CDDF82AD7fF2b207AD43586976FEB19BA985",
                "code": "sETH",
              },
              "bToken": Object {
                "address": "0x977feC72C295EdAf7E7deA5681E42CaFf69749e3",
                "code": "LETH",
              },
              "custodian": Object {
                "address": "0x00be45Fe5903AB1b33a9d3969b05b29552a6d18b",
                "code": "MOZART-PPT",
              },
            },
          },
          "Vivaldi": Object {
            "100C-1H": Object {
              "aToken": Object {
                "address": "0x75Bcb8C5f50Cc05d0B82c6321f22E848FEbB5F88",
                "code": "ETH-100C-1H",
              },
              "bToken": Object {
                "address": "0xCfC7C9792975193a9d0E78f0350041Ceb4fa388C",
                "code": "ETH-100P-1H",
              },
              "custodian": Object {
                "address": "0x32a42AeDe34Cd0D2D76e02E0d3A3440706A9c619",
                "code": "VIVALDI-100C-1H",
              },
            },
          },
        },
        "DUO": Object {
          "address": "0x61cA89CfC5E8099702e64e97D9b5FC457cf1d355",
          "code": "DUO",
        },
        "MultiSigManagers": Array [
          Object {
            "address": "0xD728681490d63582047A6Cd2fC80B1343C6AbA20",
            "code": "Esplanade",
          },
        ],
        "Oracles": Array [
          Object {
            "address": "0x0d729B3C11b3E6Bf5792d36f640f3Be6f187Dd67",
            "code": "Magi",
          },
        ],
        "Stakes": Array [
          Object {
            "address": "0x71E17030E49A1361b8E1902d613C4e5dD2185e8A",
            "code": "Stake-0",
          },
          Object {
            "address": "0x0646B77D768a459aA5F84E6A160A5B72b88d76eA",
            "code": "Stake-60",
          },
        ],
        "StakesV2": Array [
          Object {
            "address": "0xc99814003fdeb4eb77d808cb1cf08bca0d8502e5",
            "code": "Stake-0",
          },
        ],
      },
    },
    "0x13016f27945f3f7b39A5Daae068D698e34E55491",
  ],
  Array [
    Object {
      "contractAddresses": Object {
        "Custodians": Object {
          "Beethoven": Object {
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x59E6B3d43F762310626d2905148939973db2BBd3",
                "code": "aETH",
              },
              "bToken": Object {
                "address": "0x8A3bEca74E0E737460bDE45a09594A8D7D8c9886",
                "code": "bETH",
              },
              "custodian": Object {
                "address": "0x13016f27945f3f7b39A5Daae068D698e34E55491",
                "code": "BEETHOVEN-PPT",
              },
            },
          },
          "Mozart": Object {
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x2cB7CDDF82AD7fF2b207AD43586976FEB19BA985",
                "code": "sETH",
              },
              "bToken": Object {
                "address": "0x977feC72C295EdAf7E7deA5681E42CaFf69749e3",
                "code": "LETH",
              },
              "custodian": Object {
                "address": "0x00be45Fe5903AB1b33a9d3969b05b29552a6d18b",
                "code": "MOZART-PPT",
              },
            },
          },
          "Vivaldi": Object {
            "100C-1H": Object {
              "aToken": Object {
                "address": "0x75Bcb8C5f50Cc05d0B82c6321f22E848FEbB5F88",
                "code": "ETH-100C-1H",
              },
              "bToken": Object {
                "address": "0xCfC7C9792975193a9d0E78f0350041Ceb4fa388C",
                "code": "ETH-100P-1H",
              },
              "custodian": Object {
                "address": "0x32a42AeDe34Cd0D2D76e02E0d3A3440706A9c619",
                "code": "VIVALDI-100C-1H",
              },
            },
          },
        },
        "DUO": Object {
          "address": "0x61cA89CfC5E8099702e64e97D9b5FC457cf1d355",
          "code": "DUO",
        },
        "MultiSigManagers": Array [
          Object {
            "address": "0xD728681490d63582047A6Cd2fC80B1343C6AbA20",
            "code": "Esplanade",
          },
        ],
        "Oracles": Array [
          Object {
            "address": "0x0d729B3C11b3E6Bf5792d36f640f3Be6f187Dd67",
            "code": "Magi",
          },
        ],
        "Stakes": Array [
          Object {
            "address": "0x71E17030E49A1361b8E1902d613C4e5dD2185e8A",
            "code": "Stake-0",
          },
          Object {
            "address": "0x0646B77D768a459aA5F84E6A160A5B72b88d76eA",
            "code": "Stake-60",
          },
        ],
        "StakesV2": Array [
          Object {
            "address": "0xc99814003fdeb4eb77d808cb1cf08bca0d8502e5",
            "code": "Stake-0",
          },
        ],
      },
    },
    "0x00be45Fe5903AB1b33a9d3969b05b29552a6d18b",
  ],
  Array [
    Object {
      "contractAddresses": Object {
        "Custodians": Object {
          "Beethoven": Object {
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x59E6B3d43F762310626d2905148939973db2BBd3",
                "code": "aETH",
              },
              "bToken": Object {
                "address": "0x8A3bEca74E0E737460bDE45a09594A8D7D8c9886",
                "code": "bETH",
              },
              "custodian": Object {
                "address": "0x13016f27945f3f7b39A5Daae068D698e34E55491",
                "code": "BEETHOVEN-PPT",
              },
            },
          },
          "Mozart": Object {
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x2cB7CDDF82AD7fF2b207AD43586976FEB19BA985",
                "code": "sETH",
              },
              "bToken": Object {
                "address": "0x977feC72C295EdAf7E7deA5681E42CaFf69749e3",
                "code": "LETH",
              },
              "custodian": Object {
                "address": "0x00be45Fe5903AB1b33a9d3969b05b29552a6d18b",
                "code": "MOZART-PPT",
              },
            },
          },
          "Vivaldi": Object {
            "100C-1H": Object {
              "aToken": Object {
                "address": "0x75Bcb8C5f50Cc05d0B82c6321f22E848FEbB5F88",
                "code": "ETH-100C-1H",
              },
              "bToken": Object {
                "address": "0xCfC7C9792975193a9d0E78f0350041Ceb4fa388C",
                "code": "ETH-100P-1H",
              },
              "custodian": Object {
                "address": "0x32a42AeDe34Cd0D2D76e02E0d3A3440706A9c619",
                "code": "VIVALDI-100C-1H",
              },
            },
          },
        },
        "DUO": Object {
          "address": "0x61cA89CfC5E8099702e64e97D9b5FC457cf1d355",
          "code": "DUO",
        },
        "MultiSigManagers": Array [
          Object {
            "address": "0xD728681490d63582047A6Cd2fC80B1343C6AbA20",
            "code": "Esplanade",
          },
        ],
        "Oracles": Array [
          Object {
            "address": "0x0d729B3C11b3E6Bf5792d36f640f3Be6f187Dd67",
            "code": "Magi",
          },
        ],
        "Stakes": Array [
          Object {
            "address": "0x71E17030E49A1361b8E1902d613C4e5dD2185e8A",
            "code": "Stake-0",
          },
          Object {
            "address": "0x0646B77D768a459aA5F84E6A160A5B72b88d76eA",
            "code": "Stake-60",
          },
        ],
        "StakesV2": Array [
          Object {
            "address": "0xc99814003fdeb4eb77d808cb1cf08bca0d8502e5",
            "code": "Stake-0",
          },
        ],
      },
    },
    "0x32a42AeDe34Cd0D2D76e02E0d3A3440706A9c619",
  ],
]
`;

exports[`EsplanadeWrapper 1`] = `
Object {
  "contract": "EsplanadeWrapper",
}
`;

exports[`EsplanadeWrapper 2`] = `
Array [
  Array [
    Object {
      "contractAddresses": Object {
        "Custodians": Object {
          "Beethoven": Object {
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x59E6B3d43F762310626d2905148939973db2BBd3",
                "code": "aETH",
              },
              "bToken": Object {
                "address": "0x8A3bEca74E0E737460bDE45a09594A8D7D8c9886",
                "code": "bETH",
              },
              "custodian": Object {
                "address": "0x13016f27945f3f7b39A5Daae068D698e34E55491",
                "code": "BEETHOVEN-PPT",
              },
            },
          },
          "Mozart": Object {
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x2cB7CDDF82AD7fF2b207AD43586976FEB19BA985",
                "code": "sETH",
              },
              "bToken": Object {
                "address": "0x977feC72C295EdAf7E7deA5681E42CaFf69749e3",
                "code": "LETH",
              },
              "custodian": Object {
                "address": "0x00be45Fe5903AB1b33a9d3969b05b29552a6d18b",
                "code": "MOZART-PPT",
              },
            },
          },
          "Vivaldi": Object {
            "100C-1H": Object {
              "aToken": Object {
                "address": "0x75Bcb8C5f50Cc05d0B82c6321f22E848FEbB5F88",
                "code": "ETH-100C-1H",
              },
              "bToken": Object {
                "address": "0xCfC7C9792975193a9d0E78f0350041Ceb4fa388C",
                "code": "ETH-100P-1H",
              },
              "custodian": Object {
                "address": "0x32a42AeDe34Cd0D2D76e02E0d3A3440706A9c619",
                "code": "VIVALDI-100C-1H",
              },
            },
          },
        },
        "DUO": Object {
          "address": "0x61cA89CfC5E8099702e64e97D9b5FC457cf1d355",
          "code": "DUO",
        },
        "MultiSigManagers": Array [
          Object {
            "address": "0xD728681490d63582047A6Cd2fC80B1343C6AbA20",
            "code": "Esplanade",
          },
        ],
        "Oracles": Array [
          Object {
            "address": "0x0d729B3C11b3E6Bf5792d36f640f3Be6f187Dd67",
            "code": "Magi",
          },
        ],
        "Stakes": Array [
          Object {
            "address": "0x71E17030E49A1361b8E1902d613C4e5dD2185e8A",
            "code": "Stake-0",
          },
          Object {
            "address": "0x0646B77D768a459aA5F84E6A160A5B72b88d76eA",
            "code": "Stake-60",
          },
        ],
        "StakesV2": Array [
          Object {
            "address": "0xc99814003fdeb4eb77d808cb1cf08bca0d8502e5",
            "code": "Stake-0",
          },
        ],
      },
    },
    "0xD728681490d63582047A6Cd2fC80B1343C6AbA20",
  ],
]
`;

exports[`MagiWrapper 1`] = `
Object {
  "contract": "MagiWrapper",
}
`;

exports[`MagiWrapper 2`] = `
Array [
  Array [
    Object {
      "contractAddresses": Object {
        "Custodians": Object {
          "Beethoven": Object {
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x59E6B3d43F762310626d2905148939973db2BBd3",
                "code": "aETH",
              },
              "bToken": Object {
                "address": "0x8A3bEca74E0E737460bDE45a09594A8D7D8c9886",
                "code": "bETH",
              },
              "custodian": Object {
                "address": "0x13016f27945f3f7b39A5Daae068D698e34E55491",
                "code": "BEETHOVEN-PPT",
              },
            },
          },
          "Mozart": Object {
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x2cB7CDDF82AD7fF2b207AD43586976FEB19BA985",
                "code": "sETH",
              },
              "bToken": Object {
                "address": "0x977feC72C295EdAf7E7deA5681E42CaFf69749e3",
                "code": "LETH",
              },
              "custodian": Object {
                "address": "0x00be45Fe5903AB1b33a9d3969b05b29552a6d18b",
                "code": "MOZART-PPT",
              },
            },
          },
          "Vivaldi": Object {
            "100C-1H": Object {
              "aToken": Object {
                "address": "0x75Bcb8C5f50Cc05d0B82c6321f22E848FEbB5F88",
                "code": "ETH-100C-1H",
              },
              "bToken": Object {
                "address": "0xCfC7C9792975193a9d0E78f0350041Ceb4fa388C",
                "code": "ETH-100P-1H",
              },
              "custodian": Object {
                "address": "0x32a42AeDe34Cd0D2D76e02E0d3A3440706A9c619",
                "code": "VIVALDI-100C-1H",
              },
            },
          },
        },
        "DUO": Object {
          "address": "0x61cA89CfC5E8099702e64e97D9b5FC457cf1d355",
          "code": "DUO",
        },
        "MultiSigManagers": Array [
          Object {
            "address": "0xD728681490d63582047A6Cd2fC80B1343C6AbA20",
            "code": "Esplanade",
          },
        ],
        "Oracles": Array [
          Object {
            "address": "0x0d729B3C11b3E6Bf5792d36f640f3Be6f187Dd67",
            "code": "Magi",
          },
        ],
        "Stakes": Array [
          Object {
            "address": "0x71E17030E49A1361b8E1902d613C4e5dD2185e8A",
            "code": "Stake-0",
          },
          Object {
            "address": "0x0646B77D768a459aA5F84E6A160A5B72b88d76eA",
            "code": "Stake-60",
          },
        ],
        "StakesV2": Array [
          Object {
            "address": "0xc99814003fdeb4eb77d808cb1cf08bca0d8502e5",
            "code": "Stake-0",
          },
        ],
      },
    },
    "0x0d729B3C11b3E6Bf5792d36f640f3Be6f187Dd67",
  ],
]
`;

exports[`StakeV2Wrapper 1`] = `
Object {
  "contract": "StakeV2Wrapper",
}
`;

exports[`StakeV2Wrapper 2`] = `
Array [
  Array [
    Object {
      "contractAddresses": Object {
        "Custodians": Object {
          "Beethoven": Object {
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x59E6B3d43F762310626d2905148939973db2BBd3",
                "code": "aETH",
              },
              "bToken": Object {
                "address": "0x8A3bEca74E0E737460bDE45a09594A8D7D8c9886",
                "code": "bETH",
              },
              "custodian": Object {
                "address": "0x13016f27945f3f7b39A5Daae068D698e34E55491",
                "code": "BEETHOVEN-PPT",
              },
            },
          },
          "Mozart": Object {
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x2cB7CDDF82AD7fF2b207AD43586976FEB19BA985",
                "code": "sETH",
              },
              "bToken": Object {
                "address": "0x977feC72C295EdAf7E7deA5681E42CaFf69749e3",
                "code": "LETH",
              },
              "custodian": Object {
                "address": "0x00be45Fe5903AB1b33a9d3969b05b29552a6d18b",
                "code": "MOZART-PPT",
              },
            },
          },
          "Vivaldi": Object {
            "100C-1H": Object {
              "aToken": Object {
                "address": "0x75Bcb8C5f50Cc05d0B82c6321f22E848FEbB5F88",
                "code": "ETH-100C-1H",
              },
              "bToken": Object {
                "address": "0xCfC7C9792975193a9d0E78f0350041Ceb4fa388C",
                "code": "ETH-100P-1H",
              },
              "custodian": Object {
                "address": "0x32a42AeDe34Cd0D2D76e02E0d3A3440706A9c619",
                "code": "VIVALDI-100C-1H",
              },
            },
          },
        },
        "DUO": Object {
          "address": "0x61cA89CfC5E8099702e64e97D9b5FC457cf1d355",
          "code": "DUO",
        },
        "MultiSigManagers": Array [
          Object {
            "address": "0xD728681490d63582047A6Cd2fC80B1343C6AbA20",
            "code": "Esplanade",
          },
        ],
        "Oracles": Array [
          Object {
            "address": "0x0d729B3C11b3E6Bf5792d36f640f3Be6f187Dd67",
            "code": "Magi",
          },
        ],
        "Stakes": Array [
          Object {
            "address": "0x71E17030E49A1361b8E1902d613C4e5dD2185e8A",
            "code": "Stake-0",
          },
          Object {
            "address": "0x0646B77D768a459aA5F84E6A160A5B72b88d76eA",
            "code": "Stake-60",
          },
        ],
        "StakesV2": Array [
          Object {
            "address": "0xc99814003fdeb4eb77d808cb1cf08bca0d8502e5",
            "code": "Stake-0",
          },
        ],
      },
    },
    "0xc99814003fdeb4eb77d808cb1cf08bca0d8502e5",
  ],
]
`;

exports[`StakeWrapper 1`] = `
Object {
  "contract": "StakeWrapper",
}
`;

exports[`StakeWrapper 2`] = `
Array [
  Array [
    Object {
      "contractAddresses": Object {
        "Custodians": Object {
          "Beethoven": Object {
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x59E6B3d43F762310626d2905148939973db2BBd3",
                "code": "aETH",
              },
              "bToken": Object {
                "address": "0x8A3bEca74E0E737460bDE45a09594A8D7D8c9886",
                "code": "bETH",
              },
              "custodian": Object {
                "address": "0x13016f27945f3f7b39A5Daae068D698e34E55491",
                "code": "BEETHOVEN-PPT",
              },
            },
          },
          "Mozart": Object {
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x2cB7CDDF82AD7fF2b207AD43586976FEB19BA985",
                "code": "sETH",
              },
              "bToken": Object {
                "address": "0x977feC72C295EdAf7E7deA5681E42CaFf69749e3",
                "code": "LETH",
              },
              "custodian": Object {
                "address": "0x00be45Fe5903AB1b33a9d3969b05b29552a6d18b",
                "code": "MOZART-PPT",
              },
            },
          },
          "Vivaldi": Object {
            "100C-1H": Object {
              "aToken": Object {
                "address": "0x75Bcb8C5f50Cc05d0B82c6321f22E848FEbB5F88",
                "code": "ETH-100C-1H",
              },
              "bToken": Object {
                "address": "0xCfC7C9792975193a9d0E78f0350041Ceb4fa388C",
                "code": "ETH-100P-1H",
              },
              "custodian": Object {
                "address": "0x32a42AeDe34Cd0D2D76e02E0d3A3440706A9c619",
                "code": "VIVALDI-100C-1H",
              },
            },
          },
        },
        "DUO": Object {
          "address": "0x61cA89CfC5E8099702e64e97D9b5FC457cf1d355",
          "code": "DUO",
        },
        "MultiSigManagers": Array [
          Object {
            "address": "0xD728681490d63582047A6Cd2fC80B1343C6AbA20",
            "code": "Esplanade",
          },
        ],
        "Oracles": Array [
          Object {
            "address": "0x0d729B3C11b3E6Bf5792d36f640f3Be6f187Dd67",
            "code": "Magi",
          },
        ],
        "Stakes": Array [
          Object {
            "address": "0x71E17030E49A1361b8E1902d613C4e5dD2185e8A",
            "code": "Stake-0",
          },
          Object {
            "address": "0x0646B77D768a459aA5F84E6A160A5B72b88d76eA",
            "code": "Stake-60",
          },
        ],
        "StakesV2": Array [
          Object {
            "address": "0xc99814003fdeb4eb77d808cb1cf08bca0d8502e5",
            "code": "Stake-0",
          },
        ],
      },
    },
    "0x71E17030E49A1361b8E1902d613C4e5dD2185e8A",
  ],
  Array [
    Object {
      "contractAddresses": Object {
        "Custodians": Object {
          "Beethoven": Object {
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x59E6B3d43F762310626d2905148939973db2BBd3",
                "code": "aETH",
              },
              "bToken": Object {
                "address": "0x8A3bEca74E0E737460bDE45a09594A8D7D8c9886",
                "code": "bETH",
              },
              "custodian": Object {
                "address": "0x13016f27945f3f7b39A5Daae068D698e34E55491",
                "code": "BEETHOVEN-PPT",
              },
            },
          },
          "Mozart": Object {
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x2cB7CDDF82AD7fF2b207AD43586976FEB19BA985",
                "code": "sETH",
              },
              "bToken": Object {
                "address": "0x977feC72C295EdAf7E7deA5681E42CaFf69749e3",
                "code": "LETH",
              },
              "custodian": Object {
                "address": "0x00be45Fe5903AB1b33a9d3969b05b29552a6d18b",
                "code": "MOZART-PPT",
              },
            },
          },
          "Vivaldi": Object {
            "100C-1H": Object {
              "aToken": Object {
                "address": "0x75Bcb8C5f50Cc05d0B82c6321f22E848FEbB5F88",
                "code": "ETH-100C-1H",
              },
              "bToken": Object {
                "address": "0xCfC7C9792975193a9d0E78f0350041Ceb4fa388C",
                "code": "ETH-100P-1H",
              },
              "custodian": Object {
                "address": "0x32a42AeDe34Cd0D2D76e02E0d3A3440706A9c619",
                "code": "VIVALDI-100C-1H",
              },
            },
          },
        },
        "DUO": Object {
          "address": "0x61cA89CfC5E8099702e64e97D9b5FC457cf1d355",
          "code": "DUO",
        },
        "MultiSigManagers": Array [
          Object {
            "address": "0xD728681490d63582047A6Cd2fC80B1343C6AbA20",
            "code": "Esplanade",
          },
        ],
        "Oracles": Array [
          Object {
            "address": "0x0d729B3C11b3E6Bf5792d36f640f3Be6f187Dd67",
            "code": "Magi",
          },
        ],
        "Stakes": Array [
          Object {
            "address": "0x71E17030E49A1361b8E1902d613C4e5dD2185e8A",
            "code": "Stake-0",
          },
          Object {
            "address": "0x0646B77D768a459aA5F84E6A160A5B72b88d76eA",
            "code": "Stake-60",
          },
        ],
        "StakesV2": Array [
          Object {
            "address": "0xc99814003fdeb4eb77d808cb1cf08bca0d8502e5",
            "code": "Stake-0",
          },
        ],
      },
    },
    "0x0646B77D768a459aA5F84E6A160A5B72b88d76eA",
  ],
]
`;

exports[`Web3Wrapper 1`] = `
Array [
  Array [
    [Window],
    "https://kovan.infura.io/v3/",
    "",
    false,
  ],
]
`;
